--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ compiler:
   - gcc
 before_script:
     - sudo apt-get -qq update
+    - sudo apt-get -qq install gcc
     - sudo apt-get -qq install valgrind
 script: make test
 os:
