fix(travis): install gcc 4.8 for c++11

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,18 @@
 language: cpp
 compiler:
-  - clang
-  - gcc
+    - clang
+    - gcc
 before_script:
-    - sudo apt-get -qq update
-    - sudo apt-get -qq install gcc
+    - sudo apt-get install python-software-properties
+    - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+    - sudo apt-get update -q
+    - sudo apt-get install gcc-4.8
+    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 50
     - sudo apt-get -qq install valgrind
 script: make test
 os:
     - linux
     - osx
+matrix:
+    allow_failures:
+        - os: osx
