fix(travis): install gcc 4.8 for c++11

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
     - sudo apt-get install gcc-4.8
     - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 50
     - sudo apt-get -qq install valgrind
+    - gcc --version
 script: make test
 os:
     - linux
