fix(travis): install gcc 4.8 for c++11

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,11 @@ before_install:
     - sudo apt-get install python-software-properties
     - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
     - sudo apt-get update -q
-    - sudo apt-get install gcc-4.8
+    - sudo apt-get install gcc-4.8 g++-4.8
     - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 50
+    - sudo update-alternatives --config gcc
     - sudo apt-get -qq install valgrind
-    - gcc --version
+    - $CXX --version
 script: make test
 os:
     - linux
