--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons:
       - gcc-6
       - g++-6
       - cmake
-      - valgrind
+#      - valgrind
       - cppcheck
       - build-essential
 env:
@@ -33,8 +33,8 @@ before_install:
         choco install make cmake cppcheck
         ;;
       linux)
-        sudo ln -s /usr/bin/gcc-6 /usr/local/bin/gcc
-        sudo ln -s /usr/bin/g++-6 /usr/local/bin/g++
+        sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-6 50
+        sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 50
         ;;
     esac
 script: make test STATSD_COMPILE_MODE=$STATSD_COMPILE_MODE
