--- a/.travis.yml
+++ b/.travis.yml
@@ -1,41 +1,36 @@
-language: cpp
-compiler:
-    - clang
-    - gcc
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - gcc-6
-      - g++-6
-      - cmake
-#      - valgrind
-      - cppcheck
-      - build-essential
+language: bash
 env:
     - STATSD_COMPILE_MODE=Debug
     - STATSD_COMPILE_MODE=Release
-branches:
-  only: 
-    - master
-os:
-    - linux
-    - osx
-    - windows
+compiler:
+    - clang
+    - gcc
 matrix:
-    allow_failures:
-        - os: windows
-before_install:
-- |-
-    case $TRAVIS_OS_NAME in
-      windows)
-        choco install make cmake cppcheck
-        ;;
-      linux)
-        sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-6 50
-        sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-6 50
-        ;;
-    esac
-script: make test STATSD_COMPILE_MODE=$STATSD_COMPILE_MODE
-after_script: make lint
+  include:
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-5
+            - gcc-5
+            - cppcheck
+      env:
+         - COMPILER="CC=gcc-5 && CXX=g++-5"
+      before_install: eval "${COMPILER}"
+      script: make test STATSD_COMPILE_MODE=$STATSD_COMPILE_MODE
+      after_script: make lint
+    - os: osx
+      osx_image: xcode10
+      script: make test STATSD_COMPILE_MODE=$STATSD_COMPILE_MODE
+      after_script: make lint
+    - os: windows
+      install: choco install mingw make cmake cppcheck
+      env:
+        - CMAKE_PATH="/c/Program Files/CMake/bin"
+      script: 
+        - export PATH=$CMAKE_PATH:$PATH
+        - mkdir build && cd build
+        - cmake ..
+        - cmake --build .
